test/modules/deitz/test_module_use4.good
test_module_use4.chpl:12: error: Illegal use of non-module M1
